# hh-helper

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  settings.py
src/: api.py  bot.py  settings.py
src/app/errors/: errors.py
src/app/schemas/: __init__.py  auth.py
src/app/services/: auth.py  hh.py
src/domain/: entities.py
src/infra/: repositories.py
